--- a/plc86/package.yaml
+++ b/plc86/package.yaml
@@ -2,9 +2,9 @@ name:       plc86
 version:    0.1.0.0
 github:     "githubuser/plc86"
 license:    BSD-3-Clause
-author:     "Author name here"
-maintainer: "example@example.com"
-copyright:  "2025 Author name here"
+author:     "Josh Stevenitt, Ayodotun Lanipekun, Henry Skinner "
+maintainer: "js19g23@soton.ac.uk, al8g23@soton.ac.uk, hs12g21@soton.ac.uk"
+copyright:  "2025 Josh Stevenitt, Ayodotun Lanipekun, Henry Skinner"
 
 extra-source-files:
 - README.md
