--- a/plc86/plc86.cabal
+++ b/plc86/plc86.cabal
@@ -36,7 +36,8 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      array
+      MissingH
+    , array
     , base >=4.7 && <5
   default-language: Haskell2010
   build-tool-depends:
@@ -53,7 +54,8 @@ executable plc86-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      array
+      MissingH
+    , array
     , base >=4.7 && <5
     , plc86
   default-language: Haskell2010
@@ -69,7 +71,8 @@ test-suite plc86-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      array
+      MissingH
+    , array
     , base >=4.7 && <5
     , plc86
   default-language: Haskell2010
